Completed the omeletteGarnie page

--- a/recipes/omeletteGarnie.html
+++ b/recipes/omeletteGarnie.html
@@ -5,4 +5,33 @@
 </head>
 <body>
     <h1><strong>Omelette garnie</strong></h1>
+    <img src="images/omelette.jpeg">
+    <h3><em>Description</em></h3>
+    <p>l’omelette garnie aux pommes de terre, au bacon et au persil est un repas rapide à faire</p>
+
+
+    <h3><em>Liste des ingredients</em></h3>
+    <ul>
+        <li>2oeufs</li>
+        <li>250g de pommes de terre</li>
+        <li>25g de bacon</li>
+        <li>1 oignon</li>
+        <li>Une petite poignée de peluches de persil frais</li>
+    </ul>
+
+    <h3><em>Preparations</em></h3>
+    <ol>
+        <li>Laver et eplucher les pommes de terre</li>
+        <li>Casser les oeufs dans un bol puis les mélanger avec une fourchette</li>
+        <li>Ajouter des epices dans les oeufs à votre convenance</li>
+        <li>Les couper en cubes de 1cmx1cmx1cm puis les cuires à l'eau 15minutes</li>
+        <li>Faire revenir le bacon a la poelle jusqu'a ce qu'il soit doré </li>
+        <li>Ajouter l'oignon et faire revenir</li>
+        <li>Ajouter l'oeuf et le persil frais</li>
+        <li>Cuire deux minutes sur chaque face</li>
+    </ol>
+
+    <h2><strong>C'est prêt, profitez en</strong></h2>
+
+
 </body>
