Completed the Homepage AND liked the pages

--- a/index.html
+++ b/index.html
@@ -5,4 +5,9 @@
 </head>
 <body>
     <h1><strong>Recettes</strong></h1>
+    <ul>
+        <li><a href="recipes/omeletteGarnie.html">Omelette Garnie</a></li>
+        <li><a href="recipes/pouletCurry.html">Poulet au curry</a></li>
+        <li><a href="recipes/mousseChocolat.html">Mousse au chocolat</a></li>
+    </ul>
 </body>
