Completed the pouletCurry Webpage

--- a/recipes/pouletCurry.html
+++ b/recipes/pouletCurry.html
@@ -1,8 +1,29 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="fr">
 <head>
     <Meta charset="UTF-8">
     <title>Poulet au curry</title>
 </head>
 <body>
-    <h1><strong>Poulet au curry</strong>    </h1>
+    <h1><strong>Poulet au curry</strong></h1>
+    <img src="images/curry.jpeg">
+    <h3>Ingredients</h3>
+    <ul>
+        <li>2oignons jaunes</li>
+        <li>curry</li>
+        <li>Cumin</li>
+        <li>Piment</li>
+        <li>Poivre</li>
+        <li>Sel</li>
+        <li>4blancs de poulet</li>
+        <li>1pot de creme fraiche</li>
+    </ul>
+    <h3>Preparation</h3>
+    <ol>
+        <li>Mettre une grande poele a chauffer. Couper les oignons en petits morceaux, et les faire cuire a feu assez fort.</li>
+        <li>Remuer, en ajoutant du curry et du cumin.</li>
+        <li>Couper les blancs de poulet en morceaux, les ajouter dans la poele et remettre des epices; tourner.</li>
+        <li>Baisser le feu, et ajouter 2 culileres a soupe de creme.</li>
+        <li>Apres 5 min de cuisson, remettre 2 culileres a soupe de creme et des epices (si necessaire).</li>
+        <li>Si le plat est fait a l'avance, remettre un peu de creme au moment de rechauffer car la sauce s'evapore.</li>
+    </ol>
 </body>
