Completed the last recipe and UPDATED the README with challenges faced

--- a/recipes/mousseChocolat.html
+++ b/recipes/mousseChocolat.html
@@ -1,8 +1,28 @@
-<!Doctype html>
+<!Doctype html lang="fr">
 <head>
     <Meta charset="UTF-8">
     <title>Mousse au chocolat</title>
 </head>
 <body>
     <h1><strong>Mousse au chocolat</strong></h1>
+    <img src="images/mousse.jpeg">
+    <h3>Ingredients</h3>
+    <h4>pour 3 personnes</h4>
+    <ul>
+        <li>100 grammes de chocolat noir</li>
+        <li>1 sachet de sucre vanillé OU 1 pincée de sel</li>
+        <li>3oeufs</li>
+    </ul>
+    <h3>Preparations</h3>
+    <ol>
+        <li>Séparer les blancs des jaunes d'oeufs</li>
+        <li>Faire ramollir le chocolat dans une casserole</li>
+        <li>Hors du feu, incorporer les jaunes et le sucre</li>
+        <li>Battre les blanc en neige ferme</li>
+        <li>Ajouter délicatement les blanc au mélange à l'aide d'une spatule</li>
+        <li>Verser dans une terrine ou des verrines</li>
+        <li>Mettre au frais 2h minimum</li>
+        <li>Décorer de cacao ou de chocolat râpé</li>
+    </ol>
+
 </body>
